trying to fix the problem "X to close the nav not showing correct in mobiles"

--- a/styles/tablet-style.scss
+++ b/styles/tablet-style.scss
@@ -6,10 +6,10 @@
             height: 100vh;
             width: 100%;
             position: absolute;
+            // top: 0;
+            right: 0;
             bottom: 0;
             left: -100%;
-            // left: 0;
-            right: 0;
             z-index: 2;
             transition: left .5s;
             #menu-close{
@@ -18,7 +18,7 @@
                 justify-content: flex-end;
                 align-items: center;
                 padding:0px 30px 0px 30px;
-                // background-color: violet;
+                background-color: violet;
                 cursor: pointer;
             }
             ul {
